[package]
name = "digital-garden"
version = "0.1.0"
authors = ["Manikandan Sundararajan <mani@hey.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "garden"
path = "src/main.rs"

[lib]
name = "digital_garden"
path = "src/lib.rs"

[dependencies]
color-eyre = "0.6.1"
directories = "4.0.1"
structopt = "0.3.26"
edit = "0.1.4"

[dev-dependencies]
assert_cmd = "2.0.4"
